test: 벌크 인덱싱 API 사용 예제 및 통합 테스트 추가
- `BulkIndexingIntegrationExample` 클래스 구현으로 벌크 인덱싱 사용 예제 제공
- `ProductBulkIndexControllerTest`를 통해 컨트롤러 레벨의 테스트 코드 추가
- `ProductBulkIndexRequest`와 `ProductBulkIndexResponse` DTO 클래스 작성 및 유효성 검증 로직 포함
- `test-bulk-products.json` 파일 추가하여 테스트 데이터를 JSON 형식으로 관리